# jr-freight-map

./: .prettierignore  LICENSE  eslint.config.mjs  eslint.config.ts  next.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: deploy.yml
assets/: stops.json
layouts/: LayoutDefault.tsx
pages/: +config.ts
pages/index/: +Page.tsx  Map.tsx  index.tsx
public/: stations.json  style.json
public/data/: stop_times.json
scripts/: .gitignore  generate-json.py  main.py  pyproject.toml
scripts/src/scripts/: shape.py  stop_times.py
src/pages/: index.tsx
